# CppMinecraftClone

./: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
GLSL/: basic.shader
OPEN-GL/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
RENDERING/: FPSCamera.cpp  FPSCamera.h  FPSCounter.cpp  FPSCounter.h  Renderer.cpp  Renderer.h  Timestep.h
src/: Application.cpp  Debug.cpp  Debug.h
